basic media added

--- a/index.html
+++ b/index.html
@@ -4,19 +4,39 @@
  <meta charset="UTF-8">
 
 
- <title>coding challenge 💪</title>
- <link rel="stylesheet" href="style.css">
+  <title>coding challenge 💪</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 
 </head>
-<body class="grid">
+<body>
+
+  <div class="grid">
+
+    <div class="top-left">
+      <img src="runner.jpg" alt="runner" class="runner">
+      <i class="fab fa-instagram">@chucknorris</i>
+    </div>
+
+    <div class="bottom-left">
+      <img src="track.png" alt="running track" class="track">
+    </div>
+
+    <div class="top-right">
+      <video playsinline autoplay loop muted class="video">
+        <source type="video/mp4" src="https://cdn.shopify.com/s/files/1/0105/8367/0884/files/0014_JORIK_J_JBTS_2019-02-22_virgillbarron_808d02fd-7c72-4496-8783-ec1a0cf7b8bf.mp4?2140529630026701366">
+        <source type="video/webm" src="https://cdn.shopify.com/s/files/1/0105/8367/0884/files/0014_JORIK_J_JBTS_2019-02-22_virgillbarron_6e070f63-a1ee-42fe-a6a5-e6e27df8ac17.webm?2140529630026701366">
+      </video>
+    </div>
+
+    <div class="bottom-right">
+      <img src="redsportsock.png" alt="sock" class="sock">
+    </div>
+  </div>
 
 
-  <div class="top-left">1.1</div>
-  <div class="bottom-left">1.2</div>
-  <div class="top-right">2.1</div>
-  <div class="bottom-right">2.2</div>
 
-
-<script src="main.js" async></script>
+<!-- <script src="main.js" async></script> -->
 </body>
 </html>
