--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     <div class="top-left">
       <img src="runner.jpg" alt="runner" class="runner">
-      <i class="fab fa-instagram">@chucknorris</i>
+      <div class="insta">
+        <i class="fab fa-instagram insta-logo"></i><p class="instaname">@chucknorris</p>
+      </div>
     </div>
 
     <div class="bottom-left">
@@ -25,6 +27,7 @@
 
     <div class="top-right">
       <video playsinline autoplay loop muted class="video">
+        <!-- with autoplay the video will automatically start playing as soon as it can do so without stopping -->
         <source type="video/mp4" src="https://cdn.shopify.com/s/files/1/0105/8367/0884/files/0014_JORIK_J_JBTS_2019-02-22_virgillbarron_808d02fd-7c72-4496-8783-ec1a0cf7b8bf.mp4?2140529630026701366">
         <source type="video/webm" src="https://cdn.shopify.com/s/files/1/0105/8367/0884/files/0014_JORIK_J_JBTS_2019-02-22_virgillbarron_6e070f63-a1ee-42fe-a6a5-e6e27df8ac17.webm?2140529630026701366">
       </video>
@@ -37,6 +40,6 @@
 
 
 
-<!-- <script src="main.js" async></script> -->
+<script src="main.js" async></script>
 </body>
 </html>
