bottom left styled + code re-arrangement

--- a/index.html
+++ b/index.html
@@ -7,24 +7,49 @@
   <title>coding challenge 💪</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 
 </head>
 <body>
 
-  <div class="grid">
+  <div class="general-grid">
 
+    <!-- TOP LEFT -->
     <div class="top-left">
       <img src="runner.jpg" alt="runner" class="runner">
-      <div class="insta">
+     <!--  <div class="insta">
         <i class="fab fa-instagram insta-logo"></i><p class="instaname">@chucknorris</p>
-      </div>
+      </div> -->
+
+      <p class="instaname"><i class="fab fa-instagram insta-logo"></i>&nbsp;@chucknorris</p>
     </div>
 
+
+  <!-- BOTTOM LEFT -->
     <div class="bottom-left">
       <img src="track.png" alt="running track" class="track">
+
+      <div class="info-grid">
+        <div class="main-info">
+          <p class="info-title">Safety experienced <strong>86% less muscle pain</strong> after a 10km run*</p>
+          <p class="info-sub">*read supporting evidence</p>
+        </div>
+
+        <div class="info-one">
+          <p class="info-sub"><strong>COMPRESSION</strong></p>
+          <p class="info-sub">22-28 mmHg</p>
+        </div>
+
+        <div class="info-two">
+          <p class="info-sub"><strong>MATERIAL</strong></p>
+          <p class="info-sub">48% Polypropylene + 37% Polyamide + 15% Elastane</p>
+        </div>
+      </div>
+
     </div>
 
+
+  <!-- TOP RIGHT -->
     <div class="top-right">
       <video playsinline autoplay loop muted class="video">
         <!-- with autoplay the video will automatically start playing as soon as it can do so without stopping -->
@@ -33,9 +58,12 @@
       </video>
     </div>
 
+
+  <!-- BOTTOM RIGHT -->
     <div class="bottom-right">
       <img src="redsportsock.png" alt="sock" class="sock">
     </div>
+
   </div>
 
 
