bottom right completed, css lines

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
   <!-- BOTTOM RIGHT -->
     <div class="bottom-right">
       <img src="redsportsock.png" alt="sock" class="sock">
+      <div class="line left-line"></div>
+      <div class="line right-line"></div>
+      <div class="line bottom-line"></div>
     </div>
 
   </div>
