--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <source type="video/mp4" src="https://cdn.shopify.com/s/files/1/0105/8367/0884/files/0014_JORIK_J_JBTS_2019-02-22_virgillbarron_808d02fd-7c72-4496-8783-ec1a0cf7b8bf.mp4?2140529630026701366">
         <source type="video/webm" src="https://cdn.shopify.com/s/files/1/0105/8367/0884/files/0014_JORIK_J_JBTS_2019-02-22_virgillbarron_6e070f63-a1ee-42fe-a6a5-e6e27df8ac17.webm?2140529630026701366">
       </video>
+      <div class="overlay">
+        <p class="video-title">Our product</p>
+        <p class="video-sub">STOX lightweight Running Socks keep your energy level up and keep your feet dry and cool.</p>
+      </div>
     </div>
 
 
