code cleanup + video resizing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <i class="fab fa-instagram insta-logo"></i><p class="instaname">@chucknorris</p>
       </div> -->
 
-      <p class="instaname"><i class="fab fa-instagram insta-logo"></i>&nbsp;@chucknorris</p>
+      <p class="instaname"><i class="fab fa-instagram insta-logo"></i><span>&nbsp;@chucknorris</span></p>
     </div>
 
 
