text appear when video starts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="general-grid">
 
-    <!-- TOP LEFT -->
+    <!-- INSTA PICTURE / TOP LEFT -->
     <div class="top-left">
       <img src="runner.jpg" alt="runner" class="runner">
      <!--  <div class="insta">
@@ -25,7 +25,7 @@
     </div>
 
 
-  <!-- BOTTOM LEFT -->
+  <!-- INFO SECTION / BOTTOM LEFT -->
     <div class="bottom-left">
       <img src="track.png" alt="running track" class="track">
 
@@ -49,7 +49,7 @@
     </div>
 
 
-  <!-- TOP RIGHT -->
+  <!-- VIDEO / TOP RIGHT -->
     <div class="top-right">
       <video playsinline autoplay loop muted class="video">
         <!-- with autoplay the video will automatically start playing as soon as it can do so without stopping -->
@@ -63,7 +63,7 @@
     </div>
 
 
-  <!-- BOTTOM RIGHT -->
+  <!-- PRODUCT PICTURE / BOTTOM RIGHT -->
     <div class="bottom-right">
       <img src="redsportsock.png" alt="sock" class="sock">
       <div class="line left-line"></div>
