minor fixes, cleaning up

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <!-- INSTA PICTURE / TOP LEFT -->
     <div class="top-left">
       <img src="runner.jpg" alt="runner" class="runner">
-     <!--  <div class="insta">
-        <i class="fab fa-instagram insta-logo"></i><p class="instaname">@chucknorris</p>
-      </div> -->
 
       <p class="instaname"><i class="fab fa-instagram insta-logo"></i><span>&nbsp;@chucknorris</span></p>
     </div>
@@ -52,7 +49,7 @@
   <!-- VIDEO / TOP RIGHT -->
     <div class="top-right">
       <video playsinline autoplay loop muted class="video" poster="chuck.jpg">
-        <!-- with autoplay the video will automatically start playing as soon as it can do so without stopping -->
+        <!-- with "autoplay" the video will automatically start playing as soon as it can do so without stopping, "poster" displays an image while the video is loading -->
         <source type="video/mp4" src="jorikcropped.mp4">
         <source type="video/webm" src="jorikcropped.webm">
       </video>
